--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -61,7 +61,7 @@ code {
   margin: 30px 0 10px 20%;
   padding: 10px;
   border-radius: 5px;
-  background-color: #1a73e8;
+  background-color: rgb(6, 199, 85);
   color: white;
   border: none;
   cursor: pointer;
