--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -61,6 +61,7 @@ code {
 
 .cardSubmit {
   font-size: 16px;
+  font-weight: bold;
   margin: 30px 0 10px 20%;
   padding: 10px;
   border-radius: 5px;
